# nf-metro

./: .ci-trigger  .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  mkdocs.yml  prove_dead.py  pyproject.toml
.claude/prompts/: shared-y-grid-alignment.md
.claude/skills/: README.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  new_directive_design.yml
.github/workflows/: ci.yml  docs-links.yml  docs.yml  pages-artifact-dry-run.yml  pages-deploy.yml  playground-e2e.yml  pr-cleanup.yml  pr-render-publish.yml  pr-renders.yml  render-metro-map.yml
_pr/1261/: index.html
_pr/1265/: index.html
_pr/1305/: index.html
_pr/1306/: index.html
_pr/1316/: index.html
_pr/1346/: index.html
_pr/1359/: index.html
_pr/1375/: index.html
_pr/1382/: index.html
_pr/1386/: index.html
_pr/1389/: index.html
_pr/1392/: index.html
_pr/1393/: index.html
_pr/1395/: index.html
_pr/1399/: index.html
_pr/1400/: index.html
_pr/1401/: index.html
_pr/1405/: index.html
_pr/1406/: index.html
_pr/1407/: index.html
_pr/1408/: index.html
_pr/1412/: index.html
_pr/1415/: index.html
_pr/1419/: index.html
_pr/1429/: index.html
_pr/1431/: index.html
_pr/1450/: index.html
_pr/1451/: index.html
_pr/1463/: index.html
_pr/1464/: index.html
_pr/1466/: index.html
_pr/1467/: index.html
_pr/1468/: index.html
_pr/1469/: index.html
_pr/1474/: index.html
_pr/1475/: index.html
_pr/1479/: index.html
_pr/1483/: index.html
_pr/1489/: index.html
_pr/1490/: index.html
_pr/1491/: index.html
_pr/1492/: index.html
_pr/1493/: index.html
_pr/1499/: index.html
_pr/1500/: index.html
_pr/1507/: index.html
_pr/1508/: index.html
_pr/1510/: index.html
_pr/1514/: index.html
_pr/1524/: index.html
_pr/1525/: index.html
_pr/1527/: index.html
_pr/1528/: index.html
_pr/1531/: index.html
_pr/1532/: index.html
_pr/1533/: index.html
_pr/1534/: index.html
dev/: 404.html  index.html  sitemap-0.xml
dev/_astro/: middleware.BcmjrHhR.css
dev/automation/: index.html
dev/cli/: index.html
dev/contributing/: index.html
dev/credits/: index.html
dev/embed/: index.html
dev/embedding/: index.html
dev/guide/: index.html
dev/how-its-built/: index.html
dev/live/: index.html
dev/manifest/: index.html
dev/nextflow/: index.html
dev/pagefind/: pagefind-entry.json  pagefind.en_1054eeac77.pf_meta  pagefind.en_16f81805a3.pf_meta  pagefind.en_19161f37cf.pf_meta  pagefind.en_1e1d8d91ca.pf_meta  pagefind.en_29baaeee65.pf_meta  pagefind.en_2b9ae0f3f4.pf_meta  (+54 more)
dev/playground/: app.js  (+3 more)
docs/: ai-driven-development.md  automation.mdx  cli.md  constraint-solver-spike.md  contributing.mdx  embed.md  embedding.md  guide.md  guide.mdx  how-its-built.md  how-its-built.mdx  index.md  live.md  live.mdx  manifest.md  nextflow.md  nextflow.mdx  stability.md
examples/: centered_tracks.mmd  cross_track_interchange.mmd  diagonal_labels.mmd  differentialabundance.mmd  differentialabundance_default.mmd  directional_flow.mmd  disconnected_components.mmd  epitopeprediction.mmd  file_icons.mmd  funcprofiler.mmd  funcprofiler_upstream.mmd  genomeassembly.mmd  genomeassembly_staggered.mmd  genomic_pipeline.mmd  group_labels.mmd  hlatyping.mmd  legend_combo.mmd  legend_logo_placement.mmd  line_spread.mmd  longread_variant_calling.mmd  marker_styles.mmd  off_track_outputs.mmd  phantom_port.mmd  rail_mode.mmd  rail_section.mmd  rnaseq_auto.mmd  rnaseq_sections.mmd  rnaseq_sections_manual.mmd  sarek.mmd  sarek_metro.mmd  striped_line.mmd  tb_file_termini.mmd  variantbenchmarking.mmd  variantbenchmarking_auto.mmd
scratch/: baseline_dump.py  constraint_spike.py  constraint_spike_v2.py  constraint_spike_v3_compare.py  constraint_spike_v3_model.py  solver_spike.py  solver_spike_results.json
scripts/: build_gallery.py  build_playground_examples.py  build_render_diff.py  diff_phase_snapshots.py  gallery.yaml  guard_cost_audit.py  list_topology_fixtures.py  render_topologies.py  routing_gate_coverage.py  serve_docs.sh
tests/: conftest.py  layout_metrics.py  layout_validator.py  test_animation.py  test_api.py  test_aspect.py  test_auto_layout.py  test_axis_centrelines.py  test_axis_frame.py  test_backward_feed.py  test_bare_render.py  test_bottom_exit_junction_collinear_top_entry_1428.py  test_bottom_exit_junction_offset_target_1428.py  test_bottom_row_climb_invariant.py  test_bridge_glyph.py  test_bt_orientation.py  test_bundle_order_invariant.py  test_bypass_centreline.py  test_bypass_invariants.py  test_centered_tracks.py  test_centreline_inter_section.py  test_clear_channel_target_push.py  test_cli.py  test_coincide_track_radii.py  test_coincident_corner_radius_invariant.py  test_collinear_folded_corridor_1345.py  test_collinear_overlay_1074.py  test_compensation_passes_idempotent.py  test_concentric_bundle_corners.py  test_constant_relations.py  test_content_placement_idempotent.py  test_content_placement_pure.py  test_contract_lifecycle.py  test_convergence_sink_above_lane_order.py  test_convergence_sink_route_around_stack.py  test_convergence_top_descent_lane_order.py  test_convergent_climb_concentric.py  test_convert.py  test_corner_radius_ratchet.py  test_corners.py  (+148 more)
website/: astro.config.mjs  ec.config.mjs  package-lock.json  package.json
(+1886 files in other folders)
