[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nf-metro"
version = "0.7.2"
description = "Generate metro-map-style SVG diagrams from Mermaid graph definitions"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Visualization",
]
dependencies = [
    "click>=8.0",
    "drawsvg>=2.0",
    "networkx>=3.0",
    "pillow>=9.0",
]

[project.urls]
Homepage = "https://github.com/pinin4fjords/nf-metro"
Repository = "https://github.com/pinin4fjords/nf-metro"
Issues = "https://github.com/pinin4fjords/nf-metro/issues"

[project.scripts]
nf-metro = "nf_metro.cli:cli"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.4",
]
docs = [
    "mkdocs-material>=9.0",
    "mike>=2.0",
    "cairosvg>=2.5",
]

[tool.hatch.build.targets.wheel]
packages = ["src/nf_metro"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "tests"]
xfail_strict = true
addopts = "-rxX"

[tool.ruff]
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
